--- a/src/index.css
+++ b/src/index.css
@@ -520,12 +520,8 @@
   
   /* Force dropdown to appear above everything else */
   .model-selector-dropdown {
-    position: absolute !important;
+    position: fixed !important;
     z-index: 9999 !important;
-    top: 100% !important;
-    left: 0 !important;
-    right: 0 !important;
-    margin-top: 0.5rem !important;
     background: white !important;
     border: 1px solid #e5e7eb !important;
     border-radius: 0.5rem !important;
